// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox should handle events on random button 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-z48xia {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-z48xia::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia:hover,
.cache-z48xia:focus {
  border-color: #4f0599;
}

.cache-z48xia:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-z48xia::-webkit-input-placeholder {
  opacity: 1;
}

.cache-z48xia::-moz-placeholder {
  opacity: 1;
}

.cache-z48xia:-ms-input-placeholder {
  opacity: 1;
}

.cache-z48xia::placeholder {
  opacity: 1;
}

.cache-8zesy2 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-8zesy2:hover,
.cache-8zesy2:focus-within {
  color: #c4c9d6;
}

.cache-8zesy2>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-z48xia e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <div
        class="cache-8zesy2 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should handle events on toggleable password 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-z48xia {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-z48xia::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia:hover,
.cache-z48xia:focus {
  border-color: #4f0599;
}

.cache-z48xia:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-z48xia::-webkit-input-placeholder {
  opacity: 1;
}

.cache-z48xia::-moz-placeholder {
  opacity: 1;
}

.cache-z48xia:-ms-input-placeholder {
  opacity: 1;
}

.cache-z48xia::placeholder {
  opacity: 1;
}

.cache-8zesy2 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-8zesy2:hover,
.cache-8zesy2:focus-within {
  color: #c4c9d6;
}

.cache-8zesy2>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-z48xia e18bmnpq0"
        name="password"
        type="text"
        value=""
      />
      <div
        class="cache-8zesy2 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Hide"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.83,9L15,12.16C15,12.11 15,12.05 15,12A3,3 0 0,0 12,9C11.94,9 11.89,9 11.83,9M7.53,9.8L9.08,11.35C9.03,11.56 9,11.77 9,12A3,3 0 0,0 12,15C12.22,15 12.44,14.97 12.65,14.92L14.2,16.47C13.53,16.8 12.79,17 12,17A5,5 0 0,1 7,12C7,11.21 7.2,10.47 7.53,9.8M2,4.27L4.28,6.55L4.73,7C3.08,8.3 1.78,10 1,12C2.73,16.39 7,19.5 12,19.5C13.55,19.5 15.03,19.2 16.38,18.66L16.81,19.08L19.73,22L21,20.73L3.27,3M12,7A5,5 0 0,1 17,12C17,12.64 16.87,13.26 16.64,13.82L19.57,16.75C21.07,15.5 22.27,13.86 23,12C21.27,7.61 17,4.5 12,4.5C10.6,4.5 9.26,4.75 8,5.2L10.17,7.35C10.74,7.13 11.35,7 12,7Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-16jruyc {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-16jruyc::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc:hover,
.cache-16jruyc:focus {
  border-color: #4f0599;
}

.cache-16jruyc:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-16jruyc::-webkit-input-placeholder {
  opacity: 1;
}

.cache-16jruyc::-moz-placeholder {
  opacity: 1;
}

.cache-16jruyc:-ms-input-placeholder {
  opacity: 1;
}

.cache-16jruyc::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-16jruyc e18bmnpq0"
        type="text"
        value=""
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly disabled true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-3jop0x {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-3jop0x::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-3jop0x::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-3jop0x:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-3jop0x::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-3jop0x:hover,
.cache-3jop0x:focus {
  border-color: #4f0599;
}

.cache-3jop0x:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-3jop0x::-webkit-input-placeholder {
  opacity: 1;
}

.cache-3jop0x::-moz-placeholder {
  opacity: 1;
}

.cache-3jop0x:-ms-input-placeholder {
  opacity: 1;
}

.cache-3jop0x::placeholder {
  opacity: 1;
}

.cache-1g7upxo {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #d4dae7;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-3jop0x e18bmnpq0"
        disabled=""
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1g7upxo e18bmnpq3"
        disabled=""
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly error string 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-koh77h {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  border-color: #dd3252;
}

.cache-koh77h::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-koh77h::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-koh77h:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-koh77h::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-koh77h:hover,
.cache-koh77h:focus {
  border-color: #4f0599;
}

.cache-koh77h:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-koh77h::-webkit-input-placeholder {
  opacity: 1;
}

.cache-koh77h::-moz-placeholder {
  opacity: 1;
}

.cache-koh77h:-ms-input-placeholder {
  opacity: 1;
}

.cache-koh77h::placeholder {
  opacity: 1;
}

.cache-koh77h:hover,
.cache-koh77h:focus {
  border-color: #a6102d;
}

.cache-koh77h:focus {
  box-shadow: 0px 0px 0px 3px #DD325240;
  border-color: #dd3252;
}

.cache-1iem6f0 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #dd3252;
}

.cache-9xime5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.cache-9xime5.cache-9xime5 {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-koh77h e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1iem6f0 e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-9xime5"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      >
        test error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-16jruyc {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-16jruyc::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc:hover,
.cache-16jruyc:focus {
  border-color: #4f0599;
}

.cache-16jruyc:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-16jruyc::-webkit-input-placeholder {
  opacity: 1;
}

.cache-16jruyc::-moz-placeholder {
  opacity: 1;
}

.cache-16jruyc:-ms-input-placeholder {
  opacity: 1;
}

.cache-16jruyc::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        aria-label="Test"
        autocomplete="on"
        class="cache-16jruyc e18bmnpq0"
        type="text"
        value="test"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 2`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-16jruyc {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-16jruyc::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc:hover,
.cache-16jruyc:focus {
  border-color: #4f0599;
}

.cache-16jruyc:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-16jruyc::-webkit-input-placeholder {
  opacity: 1;
}

.cache-16jruyc::-moz-placeholder {
  opacity: 1;
}

.cache-16jruyc:-ms-input-placeholder {
  opacity: 1;
}

.cache-16jruyc::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-16jruyc e18bmnpq0"
        type="text"
        value="test"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 3`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1crjdqg {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1crjdqg::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:hover,
.cache-1crjdqg:focus {
  border-color: #4f0599;
}

.cache-1crjdqg:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1crjdqg::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::-moz-placeholder {
  opacity: 1;
}

.cache-1crjdqg:-ms-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1crjdqg e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly multiline true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1eh7avu {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: initial;
  resize: none;
  padding-top: 8px;
}

.cache-1eh7avu::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1eh7avu::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1eh7avu:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1eh7avu::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1eh7avu:hover,
.cache-1eh7avu:focus {
  border-color: #4f0599;
}

.cache-1eh7avu:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1eh7avu::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1eh7avu::-moz-placeholder {
  opacity: 1;
}

.cache-1eh7avu:-ms-input-placeholder {
  opacity: 1;
}

.cache-1eh7avu::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-1eh7avu e18bmnpq0"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly required true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1qtaclj {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 22px;
}

.cache-1qtaclj::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qtaclj::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qtaclj:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qtaclj::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qtaclj:hover,
.cache-1qtaclj:focus {
  border-color: #4f0599;
}

.cache-1qtaclj:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1qtaclj::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1qtaclj::-moz-placeholder {
  opacity: 1;
}

.cache-1qtaclj:-ms-input-placeholder {
  opacity: 1;
}

.cache-1qtaclj::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-d2t1jx {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
}

.cache-d2t1jx:hover,
.cache-d2t1jx:focus-within {
  color: #c4c9d6;
}

.cache-1db1s6 {
  fill: #ff8c69;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-1db1s6.cache-1db1s6 {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1qtaclj e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
      <div
        class="cache-d2t1jx e18bmnpq4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1db1s6"
          viewBox="0 0 24 24"
        >
          <path
            d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with ariaControls 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-io8ueu {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-io8ueu::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu:hover,
.cache-io8ueu:focus {
  border-color: #4f0599;
}

.cache-io8ueu:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        aria-controls="test-control"
        aria-labelledby="test-control"
        autocomplete="on"
        class="cache-io8ueu e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
        id="test-control"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with basic props 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1crjdqg {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1crjdqg::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:hover,
.cache-1crjdqg:focus {
  border-color: #4f0599;
}

.cache-1crjdqg:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1crjdqg::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::-moz-placeholder {
  opacity: 1;
}

.cache-1crjdqg:-ms-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1crjdqg e18bmnpq0"
        id="test"
        placeholder="type..."
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with defaultValue true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-io8ueu {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-io8ueu::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu:hover,
.cache-io8ueu:focus {
  border-color: #4f0599;
}

.cache-io8ueu:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-io8ueu e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with edit true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1crjdqg {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1crjdqg::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:hover,
.cache-1crjdqg:focus {
  border-color: #4f0599;
}

.cache-1crjdqg:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1crjdqg::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::-moz-placeholder {
  opacity: 1;
}

.cache-1crjdqg:-ms-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1crjdqg e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with fillAvailable true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-io8ueu {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-io8ueu::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu:hover,
.cache-io8ueu:focus {
  border-color: #4f0599;
}

.cache-io8ueu:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-io8ueu e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with generated true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1crjdqg {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1crjdqg::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:hover,
.cache-1crjdqg:focus {
  border-color: #4f0599;
}

.cache-1crjdqg:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1crjdqg::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::-moz-placeholder {
  opacity: 1;
}

.cache-1crjdqg:-ms-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1crjdqg e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with height prop 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1crjdqg {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1crjdqg::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:hover,
.cache-1crjdqg:focus {
  border-color: #4f0599;
}

.cache-1crjdqg:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1crjdqg::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::-moz-placeholder {
  opacity: 1;
}

.cache-1crjdqg:-ms-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1crjdqg e18bmnpq0"
        style="height: 90px;"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with notice 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1crjdqg {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1crjdqg::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1crjdqg:hover,
.cache-1crjdqg:focus {
  border-color: #4f0599;
}

.cache-1crjdqg:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1crjdqg::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::-moz-placeholder {
  opacity: 1;
}

.cache-1crjdqg:-ms-input-placeholder {
  opacity: 1;
}

.cache-1crjdqg::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

.cache-1rto160 {
  color: #b2b6c3;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1rto160.cache-1rto160 {
  margin-top: 8px;
}

.cache-bkobgy {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-bkobgy.cache-bkobgy {
  vertical-align: top;
  margin-right: 8px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1crjdqg e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
    <div
      class="e1qg14600 cache-1rto160"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-bkobgy"
        viewBox="0 0 24 24"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
      <div
        class="ejtitxs0 cache-ykhhhn"
      >
        <p>
          <span>
            Test notice
          </span>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with null right component 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1k7941x {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-1k7941x::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1k7941x::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1k7941x:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1k7941x::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1k7941x:hover,
.cache-1k7941x:focus {
  border-color: #4f0599;
}

.cache-1k7941x:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1k7941x::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1k7941x::-moz-placeholder {
  opacity: 1;
}

.cache-1k7941x:-ms-input-placeholder {
  opacity: 1;
}

.cache-1k7941x::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1e71fue {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
  pointer-events: auto;
}

.cache-1e71fue:hover,
.cache-1e71fue:focus-within {
  color: #c4c9d6;
}

.cache-1e71fue>button {
  box-shadow: none!important;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1k7941x e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-1e71fue e18bmnpq4"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with readOnly true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-ody3a1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  background-color: #e6e9f0;
  border-color: #f6f6f8;
  color: #4a4f62;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-ody3a1::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ody3a1::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ody3a1:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ody3a1::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ody3a1:hover,
.cache-ody3a1:focus {
  border-color: #4f0599;
}

.cache-ody3a1:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-10d8dwx {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #c4c9d6;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-ody3a1 e18bmnpq0"
        name="test"
        readonly=""
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-10d8dwx e18bmnpq3"
        readonly=""
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1j9k4mz {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-1j9k4mz::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1j9k4mz::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1j9k4mz:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1j9k4mz::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1j9k4mz:hover,
.cache-1j9k4mz:focus {
  border-color: #4f0599;
}

.cache-1j9k4mz:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-q8zp5m {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-q8zp5m:hover,
.cache-q8zp5m:focus-within {
  color: #c4c9d6;
}

.cache-13yy6kn {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #f6f6f8;
}

.cache-a9x6v4 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

.cache-a9x6v4.cache-a9x6v4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1j9k4mz e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-q8zp5m e18bmnpq4"
      >
        <hr
          aria-orientation="vertical"
          class="e18bmnpq5 eoti1h20 cache-13yy6kn"
          role="separator"
        />
        <p
          class="e1g1zfwd0 cache-a9x6v4"
        >
          px
        </p>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px and required 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-76zt1o {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 22px;
}

.cache-76zt1o::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76zt1o::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76zt1o:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76zt1o::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-76zt1o:hover,
.cache-76zt1o:focus {
  border-color: #4f0599;
}

.cache-76zt1o:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-q8zp5m {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-q8zp5m:hover,
.cache-q8zp5m:focus-within {
  color: #c4c9d6;
}

.cache-13yy6kn {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #f6f6f8;
}

.cache-a9x6v4 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

.cache-a9x6v4.cache-a9x6v4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-ncrew1 {
  fill: #ff8c69;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.cache-ncrew1.cache-ncrew1 {
  vertical-align: middle;
  margin-left: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-76zt1o e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-q8zp5m e18bmnpq4"
      >
        <hr
          aria-orientation="vertical"
          class="e18bmnpq5 eoti1h20 cache-13yy6kn"
          role="separator"
        />
        <p
          class="e1g1zfwd0 cache-a9x6v4"
        >
          px
          <svg
            class="sc-ui-icon etwatq50 cache-ncrew1"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </p>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid false 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-io8ueu {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-io8ueu::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-io8ueu:hover,
.cache-io8ueu:focus {
  border-color: #4f0599;
}

.cache-io8ueu:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-io8ueu e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1j9k4mz {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-1j9k4mz::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1j9k4mz::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1j9k4mz:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1j9k4mz::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1j9k4mz:hover,
.cache-1j9k4mz:focus {
  border-color: #4f0599;
}

.cache-1j9k4mz:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-17q904z {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
}

.cache-17q904z:hover,
.cache-17q904z:focus-within {
  color: #c4c9d6;
}

.cache-1vnssg0 {
  fill: #22c8a2;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-1vnssg0.cache-1vnssg0 {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1j9k4mz e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-17q904z e18bmnpq4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1vnssg0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render multiline with props 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-pp27rf {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: 100%;
  resize: vertical;
  padding-top: 8px;
}

.cache-pp27rf::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-pp27rf::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-pp27rf:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-pp27rf::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-pp27rf:hover,
.cache-pp27rf:focus {
  border-color: #4f0599;
}

.cache-pp27rf:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-pp27rf::-webkit-input-placeholder {
  opacity: 1;
}

.cache-pp27rf::-moz-placeholder {
  opacity: 1;
}

.cache-pp27rf:-ms-input-placeholder {
  opacity: 1;
}

.cache-pp27rf::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-pp27rf e18bmnpq0"
        cols="50"
        rows="10"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render on focus 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1wx7zjd {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-top: 20px;
  height: initial;
  resize: vertical;
}

.cache-1wx7zjd::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1wx7zjd::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1wx7zjd:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1wx7zjd::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1wx7zjd:hover,
.cache-1wx7zjd:focus {
  border-color: #4f0599;
}

.cache-1wx7zjd:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1wx7zjd::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1wx7zjd::-moz-placeholder {
  opacity: 1;
}

.cache-1wx7zjd:-ms-input-placeholder {
  opacity: 1;
}

.cache-1wx7zjd::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-1wx7zjd e18bmnpq0"
        cols="50"
        id="test"
        rows="10"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-z48xia {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-z48xia::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia:hover,
.cache-z48xia:focus {
  border-color: #4f0599;
}

.cache-z48xia:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-z48xia::-webkit-input-placeholder {
  opacity: 1;
}

.cache-z48xia::-moz-placeholder {
  opacity: 1;
}

.cache-z48xia:-ms-input-placeholder {
  opacity: 1;
}

.cache-z48xia::placeholder {
  opacity: 1;
}

.cache-8zesy2 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-8zesy2:hover,
.cache-8zesy2:focus-within {
  color: #c4c9d6;
}

.cache-8zesy2>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-z48xia e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <div
        class="cache-8zesy2 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 2`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-13kf4zl {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-13kf4zl::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13kf4zl::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13kf4zl:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13kf4zl::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13kf4zl:hover,
.cache-13kf4zl:focus {
  border-color: #4f0599;
}

.cache-13kf4zl:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1s4sa9c {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #d4dae7;
}

.cache-8zesy2 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-8zesy2:hover,
.cache-8zesy2:focus-within {
  color: #c4c9d6;
}

.cache-8zesy2>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-13kf4zl e18bmnpq0"
        disabled=""
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1s4sa9c e18bmnpq3"
        disabled=""
      >
        test
      </label>
      <div
        class="cache-8zesy2 e18bmnpq4"
      >
        <button
          aria-disabled="true"
          class="e1kgqxfn0 cache-1me4bek"
          disabled=""
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render toggleable password 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-z48xia {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-z48xia::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-z48xia:hover,
.cache-z48xia:focus {
  border-color: #4f0599;
}

.cache-z48xia:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-z48xia::-webkit-input-placeholder {
  opacity: 1;
}

.cache-z48xia::-moz-placeholder {
  opacity: 1;
}

.cache-z48xia:-ms-input-placeholder {
  opacity: 1;
}

.cache-z48xia::placeholder {
  opacity: 1;
}

.cache-8zesy2 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-8zesy2:hover,
.cache-8zesy2:focus-within {
  color: #c4c9d6;
}

.cache-8zesy2>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-z48xia e18bmnpq0"
        name="password"
        type="password"
        value=""
      />
      <div
        class="cache-8zesy2 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Show"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-1rshnsu e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;
